{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 48,
  "lineage": "5b1a7b99-c667-f6cf-ca31-15abfb4d6c9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/tf-lb-20230716083527110000000001/80b49d678edec318",
            "arn_suffix": "net/tf-lb-20230716083527110000000001/80b49d678edec318",
            "dns_name": "tf-lb-20230716083527110000000001-80b49d678edec318.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/tf-lb-20230716083527110000000001/80b49d678edec318",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "tf-lb-20230716083527110000000001",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080e07462be17bfa5"
              },
              {
                "subnet_id": "subnet-08108ebb5481e5592"
              },
              {
                "subnet_id": "subnet-0e27472c727cc7208"
              }
            ],
            "subnets": [
              "subnet-080e07462be17bfa5",
              "subnet-08108ebb5481e5592",
              "subnet-0e27472c727cc7208"
            ],
            "tags": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tags_all": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "vpc_id": "vpc-00065dedc78d79f9d",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:listener/net/tf-lb-20230716083527110000000001/80b49d678edec318/afa01602020b42fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-2023071608382043170000000a/9acb4e4665545350",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:listener/net/tf-lb-20230716083527110000000001/80b49d678edec318/afa01602020b42fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/tf-lb-20230716083527110000000001/80b49d678edec318",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network",
            "aws_lb_target_group.this",
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-2023071608382043170000000a/9acb4e4665545350",
            "arn_suffix": "targetgroup/tf-2023071608382043170000000a/9acb4e4665545350",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-2023071608382043170000000a/9acb4e4665545350",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-2023071608382043170000000a",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00065dedc78d79f9d"
          },
          "dependencies": [
            "aws_lb.network",
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-2023071608382043170000000a/9acb4e4665545350-2023071608382175430000000b",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-2023071608382043170000000a/9acb4e4665545350",
            "target_id": "i-0c31296f0472a4d5c"
          },
          "dependencies": [
            "aws_lb.network",
            "aws_lb_target_group.this",
            "aws_security_group.base",
            "data.aws_ami.ec2_ami_base",
            "data.aws_subnets.filter",
            "data.template_file.cloudinit_provisioner",
            "data.template_file.efs_policy",
            "module.ec2-instance-base.aws_iam_instance_profile.this",
            "module.ec2-instance-base.aws_iam_role.this",
            "module.ec2-instance-base.aws_instance.ignore_ami",
            "module.ec2-instance-base.aws_instance.this",
            "module.ec2-instance-base.aws_spot_instance_request.this",
            "module.ec2-instance-base.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance-base.data.aws_partition.current",
            "module.ec2-instance-base.data.aws_ssm_parameter.this",
            "module.efs_policy.aws_iam_policy.policy",
            "module.iam_role_ec2.aws_iam_role.this",
            "module.iam_role_ec2.data.aws_iam_policy_document.assume_role",
            "module.iam_role_ec2.data.aws_iam_policy_document.assume_role_with_mfa",
            "module.ses_policy.aws_iam_policy.policy",
            "random_id.detail"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:320413867981:security-group/sg-0cd96e931c2701265",
            "description": "EC2 Instance base security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd96e931c2701265",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.225.21.21/32",
                  "37.135.43.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance-beniaws-nlb-8663",
            "name_prefix": "",
            "owner_id": "320413867981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tags_all": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-00065dedc78d79f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance-base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fdb971723444e986",
            "arn": "arn:aws:ec2:eu-west-1:320413867981:instance/i-0c31296f0472a4d5c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-beniaws-nlb-8663",
            "id": "i-0c31296f0472a4d5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "beniaws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004cbcd8bd847e421",
            "private_dns": "ip-172-31-49-123.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.49.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:320413867981:key/38888541-83fe-49f9-a8a9-c9de265824f3",
                "throughput": 125,
                "volume_id": "vol-0cabc178f2b863b62",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instance-beniaws-nlb-8663"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdacebe2526dc348",
            "tags": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tags_all": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "ec2-instance-beniaws-nlb-8663",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "vpc_security_group_ids": [
              "sg-0cd96e931c2701265"
            ]
          },
          "dependencies": [
            "aws_security_group.base",
            "data.aws_ami.ec2_ami_base",
            "data.aws_subnets.filter",
            "data.template_file.cloudinit_provisioner",
            "data.template_file.efs_policy",
            "module.ec2-instance-base.aws_iam_instance_profile.this",
            "module.ec2-instance-base.aws_iam_role.this",
            "module.ec2-instance-base.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance-base.data.aws_partition.current",
            "module.ec2-instance-base.data.aws_ssm_parameter.this",
            "module.efs_policy.aws_iam_policy.policy",
            "module.iam_role_ec2.aws_iam_role.this",
            "module.iam_role_ec2.data.aws_iam_policy_document.assume_role",
            "module.iam_role_ec2.data.aws_iam_policy_document.assume_role_with_mfa",
            "module.ses_policy.aws_iam_policy.policy",
            "random_id.detail"
          ]
        }
      ]
    }
  ]
}